--- a/features/cit-quickstart-wizard/pom.xml
+++ b/features/cit-quickstart-wizard/pom.xml
@@ -92,6 +92,20 @@
             <artifactId>jackson-dataformat-xml</artifactId>
             <optional>true</optional>
         </dependency>
+        
+        <!-- for approving the key broker proxy user -->
+        <dependency>
+        <groupId>com.intel.mtwilson.services</groupId>
+    <artifactId>mtwilson-user-management-model</artifactId>
+        <version>3.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+        <groupId>com.intel.mtwilson.services</groupId>
+    <artifactId>mtwilson-user-management-client-jaxrs2</artifactId>
+        <version>3.0-SNAPSHOT</version>
+        </dependency>
+
+        
     
         <dependency>
             <!-- Purpose: scheduling tasks to run in background -->
